Update home.html to remove contact us

--- a/home.html
+++ b/home.html
@@ -48,24 +48,16 @@
     </header>
 
     <main class="main-section">
-      <div class="hero-section">
+       <div class="hero-section">
         <div class="main-texts">
-          <h1>Your everyday guide to balanced glucose health.</h1>
-          <p>
-            Monitor your progress and stay inspired as you work towards
-            enhancing your health and reversing diabetes.
-          </p>
-          <div class="buttons-group">
-            <ul>
-              <li class="primary"><a href="">View Proposal</a></li>
-              <li class="secondary"><a href="">Contact Us</a></li>
-            </ul>
-          </div>
+            <h1>Your everyday guide to balanced glucose health.</h1>
+            <p>Monitor your progress and stay inspired as you work towards enhancing your health and reversing diabetes.</p>
+            <button>View Proposal</button>
         </div>
         <div class="image-right hidden">
-          <img src="images/Hero-header-image.png" alt="mobile-app" />
+            <img src="images/Hero-header-image.png" alt="mobile-app">
         </div>
-      </div>
+    </div>
 
       <section class="features-section" id="features">
         <!-- Feature 1: Automated Logging -->
