Add url to proposal pdf

--- a/home.html
+++ b/home.html
@@ -30,7 +30,9 @@
           </ul>
         </div>
 
-        <button>View Proposal</button>
+          <a href="https://drive.google.com/file/d/1UFt-Val8eBFzHJAdYL_h6vdddN5lrV4f/view?usp=sharing" download>
+            <button>View Proposal</button>
+        </a>   
       </div>
       <div class="hamburger-icon" onclick="toggleMenu()">
         &#9776;
@@ -43,7 +45,9 @@
           <li><a href="#features">Features</a></li>
           <li><a href="#team">Team</a></li>
         </ul>
-        <button>View Proposal</button>
+          <a href="https://drive.google.com/file/d/1UFt-Val8eBFzHJAdYL_h6vdddN5lrV4f/view?usp=sharing" download>
+            <button>View Proposal</button>
+        </a>   
       </div>
     </header>
 
@@ -338,7 +342,9 @@
 
       <section class="contact-section">
         <h2>Ready to get started?</h2>
-        <button>View Proposal</button>
+         <a href="https://drive.google.com/file/d/1UFt-Val8eBFzHJAdYL_h6vdddN5lrV4f/view?usp=sharing" download>
+            <button>View Proposal</button>
+        </a>   
       </section>
     </main>
 
