--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
           </ul>
         </div>
 
-          <a href="https://drive.google.com/file/d/1UFt-Val8eBFzHJAdYL_h6vdddN5lrV4f/view?usp=sharing" download>
+          <a href="GlucoFit-Project-Proposal.pdf" download>
             <button>View Proposal</button>
         </a>   
       </div>
@@ -45,7 +45,7 @@
           <li><a href="#features">Features</a></li>
           <li><a href="#team">Team</a></li>
         </ul>
-          <a href="https://drive.google.com/file/d/1UFt-Val8eBFzHJAdYL_h6vdddN5lrV4f/view?usp=sharing" download>
+          <a href="GlucoFit-Project-Proposal.pdf" download>
             <button>View Proposal</button>
         </a>   
       </div>
@@ -342,7 +342,7 @@
 
       <section class="contact-section">
         <h2>Ready to get started?</h2>
-         <a href="https://drive.google.com/file/d/1UFt-Val8eBFzHJAdYL_h6vdddN5lrV4f/view?usp=sharing" download>
+         <a href="GlucoFit-Project-Proposal.pdf" download>
             <button>View Proposal</button>
         </a>   
       </section>
