add proposal to hero section

--- a/home.html
+++ b/home.html
@@ -56,7 +56,9 @@
         <div class="main-texts">
             <h1>Your everyday guide to balanced glucose health.</h1>
             <p>Monitor your progress and stay inspired as you work towards enhancing your health and reversing diabetes.</p>
+              <a href="GlucoFit-Project-Proposal.pdf" download>
             <button>View Proposal</button>
+        </a>  
         </div>
         <div class="image-right hidden">
             <img src="images/Hero-header-image.png" alt="mobile-app">
