--- a/home.html
+++ b/home.html
@@ -30,7 +30,7 @@
           </ul>
         </div>
 
-          <a href="GlucoFit-Project-Proposal.pdf" download>
+          <a href="GlucoFit-Project-Proposal.pdf" _blank>
             <button>View Proposal</button>
         </a>   
       </div>
@@ -45,7 +45,7 @@
           <li><a href="#features">Features</a></li>
           <li><a href="#team">Team</a></li>
         </ul>
-          <a href="GlucoFit-Project-Proposal.pdf" download>
+          <a href="GlucoFit-Project-Proposal.pdf" _blank>
             <button>View Proposal</button>
         </a>   
       </div>
@@ -56,7 +56,7 @@
         <div class="main-texts">
             <h1>Your everyday guide to balanced glucose health.</h1>
             <p>Monitor your progress and stay inspired as you work towards enhancing your health and reversing diabetes.</p>
-              <a href="GlucoFit-Project-Proposal.pdf" download>
+              <a href="GlucoFit-Project-Proposal.pdf" _blank>
             <button>View Proposal</button>
         </a>  
         </div>
@@ -344,7 +344,7 @@
 
       <section class="contact-section">
         <h2>Ready to get started?</h2>
-         <a href="GlucoFit-Project-Proposal.pdf" download>
+         <a href="GlucoFit-Project-Proposal.pdf" _blank>
             <button>View Proposal</button>
         </a>   
       </section>
